wip: Dokan MSM with reference to MSI

--- a/dokan_wix/DokanMSM_x64.wxs
+++ b/dokan_wix/DokanMSM_x64.wxs
@@ -99,22 +99,7 @@
 					Impersonate="no"
                 />
 
-		<InstallExecuteSequence>
-
-			<Custom Action='CheckForRebootPending' Before='LaunchConditions'>
-				<![CDATA[DOKANREBOOTPENDING = "#1"]]>
-			</Custom>
-
-			<Custom Action='GetInstallDir' Before='CostFinalize'><![CDATA[REMOVE="ALL"]]></Custom>
-			<Custom Action="SetFolderValue" Before="ExecuteInstallAction" />
-			<Custom Action='ExecuteInstallAction' After="PublishProduct"><![CDATA[Not REMOVE="ALL"]]></Custom>
-			<Custom Action="SetUninstallFolderValue" Before="ExecuteUninstallAction" />
-			<Custom Action='ExecuteUninstallAction' Before="RemoveFiles"><![CDATA[REMOVE="ALL"]]></Custom>
-			<Custom Action="SetARPINSTALLLOCATION" After="InstallValidate"></Custom>
-
-		</InstallExecuteSequence>
-
-		<Directory Id="TARGETDIR" Name="SourceDir">
+		<!--<Directory Id="TARGETDIR" Name="SourceDir">
 			<Directory Id="ProgramFiles64Folder">
 				<Directory Id="DOKANDIR" Name="Dokan">
 					<Directory Id="INSTALLDIR" Name="DokanLibrary-$(var.BaseVersion)">
@@ -278,12 +263,11 @@
 					</Component>
 				</Directory>
 			</Directory>
-		</Directory>
+		</Directory>-->
 	</Module>
 
 	<Fragment>
-		<Media Id="1" Cabinet="Dokan.cab" EmbedCab="yes"/>
-		<Feature Id="DokanDriverFeature" Title="Dokan Core" Description="Dokan driver, Dokan library and FUSE library" Level="1" Display="expand" Absent="disallow">
+		<FeatureRef Id="DokanDriverFeature">
 			<ComponentRef Id="ProgramFilesComponent"/>
 			<ComponentRef Id="Driver_x64"/>
 			<ComponentRef Id="Sys32Files"/>
@@ -293,11 +277,25 @@
 			<ComponentRef Id="ProgramFilesCygwinComponent" />
 			<ComponentRef Id="X86CygwinFiles" />
 			<?endif?>
-		</Feature>
-		<Feature Id="DokanDevFeature" Title="Development" Description="Dokan development files" Level="2" Display="expand">
-			<Condition Level="1">INSTALLDEVFILES = 1</Condition>
-			<Feature Id="DokanLibBFeature" Title="Headers and Libs" Description="Headers and libraries required for native User-Mode File System development" Level="2" Display="expand">
-				<Condition Level="1">INSTALLDEVFILES = 1</Condition>
+		</FeatureRef>
+		
+		<InstallExecuteSequence>
+
+			<Custom Action='CheckForRebootPending' Before='LaunchConditions'>
+				<![CDATA[DOKANREBOOTPENDING = "#1"]]>
+			</Custom>
+
+			<Custom Action='GetInstallDir' Before='CostFinalize'><![CDATA[REMOVE="ALL"]]></Custom>
+			<Custom Action="SetFolderValue" Before="ExecuteInstallAction" />
+			<Custom Action='ExecuteInstallAction' After="PublishProduct"><![CDATA[&DokanDriverFeature = 3 AND NOT REMOVE="ALL"]]></Custom>
+			<Custom Action="SetUninstallFolderValue" Before="ExecuteUninstallAction" />
+			<Custom Action='ExecuteUninstallAction' Before="RemoveFiles"><![CDATA[REMOVE="ALL"]]></Custom>
+			<Custom Action="SetARPINSTALLLOCATION" After="InstallValidate"></Custom>
+
+		</InstallExecuteSequence>
+		
+		<FeatureRef Id="DokanDevFeature">
+			<FeatureRef Id="DokanLibBFeature">
 				<ComponentRef Id="IncludeDokanFilesComponent"/>
 				<ComponentRef Id="IncludeFuseCompatFilesComponent"/>
 				<ComponentRef Id="IncludeFuseFilesComponent"/>
@@ -311,33 +309,18 @@
 				<ComponentRef Id="SampleFuseCygwinFilesComponentX86" />
 				<ComponentRef Id="SampleFuseMirrorCygwinComponent" />
 				<?endif?>
-			</Feature>
-			<Feature Id="DokanPDBFeature" Title="Symbols" Description="Dokan Core PDB debug files" Level="2" Display="expand">
-				<Condition Level="1">INSTALLDEVFILES = 1</Condition>
+			</FeatureRef>
+			<FeatureRef Id="DokanPDBFeature">
 				<ComponentRef Id="Driver_x64pdb"/>
 				<ComponentRef Id="SysPDBFiles"/>
 				<ComponentRef Id="SysX86PDBFiles"/>
-			</Feature>
+			</FeatureRef>
+		</FeatureRef>
+		<Feature Id="FuseCygwinComponents">
+			<ComponentRef Id="ProgramFilesCygwinComponent"/>
+			<ComponentRef Id="X86CygwinFiles"/>
+			<ComponentRef Id="SampleFuseCygwinFilesComponentX86"/>
+			<ComponentRef Id="SampleFuseMirrorCygwinComponent"/>
 		</Feature>
-		<Component Id="ProgramFilesCygwinComponent" Win64="yes" Guid="{282C8A27-E596-4828-A98F-D05F4735FC2F}" Directory="INSTALLDIR">
-			<File Id="DokanfuseCygwinDLL" Source="..\x64\Cygwin\cygdokanfuse$(var.MajorVersion).dll" Name="cygdokanfuse$(var.MajorVersion).dll" KeyPath="yes"/>
-			<File Id="DokanfuseMsys2DLL" Source="..\x64\Msys2\libdokanfuse$(var.MajorVersion).dll" Name="libdokanfuse$(var.MajorVersion).dll" KeyPath="no"/>
-		</Component>
-		<Component Id="X86CygwinFiles" Guid="{8E03853C-F8AB-47EC-A84A-E704AE980408}" Directory="X86PROGRAMSDIR">
-			<File Id="X86DokanCygFuseDLL" Source="..\Win32\Cygwin\cygdokanfuse$(var.MajorVersion).dll" Name="cygdokanfuse$(var.MajorVersion).dll" KeyPath="yes"/>
-			<File Id="X86DokanfuseMsys2DLL" Source="..\Win32\Msys2\libdokanfuse$(var.MajorVersion).dll" Name="libdokanfuse$(var.MajorVersion).dll" KeyPath="no"/>
-		</Component>
-		<Component Id="SampleFuseCygwinFilesComponentX86" Win64="yes" Guid="{CDF50D18-B6D8-4AF7-8565-637C9BBCE8A5}" Directory="FUSEMIRRORX86DIR">
-			<File Id="fuseMirrorEXEX86" Source="..\Win32\Cygwin\mirror.exe" Name="mirror.exe" KeyPath="yes"/>
-			<File Id="dokanFuseMirrorDLLX86" Source="..\Win32\$(var.Configuration)\dokan$(var.MajorVersion).dll" Name="dokan$(var.MajorVersion).dll" KeyPath="no"/>
-			<File Id="dokanCygFuseMirrorDLLX86" Source="..\Win32\Cygwin\cygdokanfuse$(var.MajorVersion).dll" Name="cygdokanfuse$(var.MajorVersion).dll" KeyPath="no"/>
-			<File Id="fuseMirrorX86C" Source="..\samples\fuse_mirror\fusexmp.c" Name="fusexmp.c" KeyPath="no"/>
-		</Component>
-		<Component Id="SampleFuseMirrorCygwinComponent" Win64="yes" Guid="{8021F81F-E5A4-4008-8769-767B7E15D119}" Directory="FUSEMIRRORDIR">
-			<File Id="fuseMirrorEXE" Source="..\x64\Cygwin\mirror.exe" Name="mirror.exe" KeyPath="yes"/>
-			<File Id="dokanFuseMirrorDLL" Source="..\x64\$(var.Configuration)\dokan$(var.MajorVersion).dll" Name="dokan$(var.MajorVersion).dll" KeyPath="no"/>
-			<File Id="dokanCygFuseMirrorDLL" Source="..\x64\Cygwin\cygdokanfuse$(var.MajorVersion).dll" Name="cygdokanfuse$(var.MajorVersion).dll" KeyPath="no"/>
-			<File Id="fuseMirrorC" Source="..\samples\fuse_mirror\fusexmp.c" Name="fusexmp.c" KeyPath="no"/>
-		</Component>
 	</Fragment>
 </Wix>
